0.135
	Added t/30-basics.t

0.134	Fri Feb 21 09:45:27 EST 2025
	Added support for GitHub Actions
	Ensure the subclasses also have versions

0.133 Fri Feb 21 08:18:02 EST 2025
	New Maintainer

0.132   2023-11-21  Released-By: PERLANCAR; Urgency: low
        - No functional changes.
        - Mark distribution as up for adoption since I'm no longer using
          it.

0.131   2021-09-26  Released-By: PERLANCAR; Urgency: low

	- No functional changes.

	- [doc] Fix a few minor typos in POD (committer: Florian Schlichting).


0.130   2021-08-09  Released-By: PERLANCAR; Urgency: medium

	- Remove requirement of input list must not be of length 1 (GH#4).


0.12    2017-07-04  Released-By: PERLANCAR

        - No functional changes.

        - Re-release to switch PAUSE account.


0.11     2013-09-18  Released-By: SHARYANTO

         - No functional changes. Rerelease due to inclusion of unneeded files
           (steven--).


0.10     2013-09-18  Released-By: SHARYANTO

         - No functional changes. Apply spelling patch from Debian maintainer
           Gregor Herman [RT#88745].


0.09     2013-08-22  Released-By: SHARYANTO

         - No functional changes. Reformat Changes to be more conformant to
           CPAN::Changes::Spec (thanks Neil Bowers).


0.08     2012-03-28  Released-By: SHARYANTO

         - peek(), look_back(), has_next(), has_previous() now accept optional
           integer argument for arbitrary lookup, e.g. peek(2) looks at the next
           next item, peek(1) is the same as peek() (implemented by Alexey
           Surikov, github#2).


0.07     2011-09-09  Released-By: SHARYANTO

         - Take over maintenance from Stevan Little.

         - Now uses Dist::Zilla and git.

         - Add lowercase method name aliases (has_next() as well as hasNext(),
           etc). The lowercase method names are now the documented ones.

         - Add iterated() to check whether an iteration has been done (i.e.