@@ -1,5 +1,7 @@
 0.135
 	Added t/30-basics.t
+	Fixed RT#126034	- note that this is a change in the way Bidirectional works, and will break old code
+	Make a local copy of the array so that changes to the array don't break things
 
 0.134	Fri Feb 21 09:45:27 EST 2025
 	Added support for GitHub Actions
